Changed and fixed some issues and alignments.

--- a/css/styles.css
+++ b/css/styles.css
@@ -49,7 +49,7 @@ h1 {
   font-family: "Material Icons";
   font-size: 90%;
   margin-left: 0.5rem;
-  vertical-align: -0.4rem;
+  vertical-align: -0.3rem;
   opacity: 0.6;
   transition: 0.3s;
 }
